src/css/ResumeBuilder.css
.resume-box {
	position: relative;
	display: flex;
	flex-direction: row;
	padding: 2%;
	/* margin-top: 1%; */
}

.resume-container {
	width: 40%;
	height: fit-content;

	background-color: white;
	box-shadow: 0 0 0.5cm #7b7d7d;
	z-index: 1;
}

/* Tab titles */
.MuiTab-wrapper {
	font-size: large;
}

.tab-bar {
	background-color: var(--resume-background-color);
	color: var(--primary-text-color);
}

.form-style {
	display: flex;
	flex-direction: column;
}

.work-form-title {
	display: flex;
	justify-content: space-between;
}

.job-desc {
	font-size: 20px;
	margin: 10px;
}

.small-field-box {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.small-field {
	width: 48%;
}

.small-field-add {
	width: 85%;
}

.form-box {
	margin: 10px 5px 10px 5px;
}

.form-box > h3 {
	margin-top: 10px;
}

.checkbox-container > ul {
	font-size: 20px;
}
.resume-navigation {
	display: flex;
	justify-content: flex-end;
	background-color: var(--resume-background-color);
	padding-bottom: 10px;
	opacity: 0.8;
}

.resume-clear-top {
	display: flex;
	justify-content: space-between;
	background-color: var(--resume-background-color);
	padding-bottom: 10px;
	opacity: 0.8;
}

.resume-clear {
	display: flex;
	justify-content: space-between;
}

.next-btn > .MuiButton-root {
	background-color: red;
}

.right {
	width: 60vw;
	min-height: 100vh;
	margin-top: 2.5%;
	background-color: var(--background);
}

.right .page {
	background: white;
	display: block;
	margin: 0 auto;
	/* margin-top: 50px; */
	margin-bottom: 0.5cm;
	box-shadow: 0 0 0.5cm #7b7d7d;
	width: 21cm;
	height: 29.7cm;
	height: fit-content;
}
/* 
.save-clear {
	position: absolute;
	margin: 0;
} */

.save-pdf {
	position: absolute;
	right: 57%;
	top: 1%;
	index: 1;
}
/* Resume Preview */
.resume-titles {
	text-transform: uppercase;
	letter-spacing: 3px;
	/* margin-top: 15px; */
	font-size: 1.2em;
	background-color: rgba(128, 128, 128, 0.338);
}

.resume-header {
	display: flex;
	flex-direction: column;
	text-align: center;
	width: 100%;
	align-items: center;
}

.content-header {
	width: 80%;
	height: 10%;
}

.content {
	width: 80%;
	margin: 0 auto;
}

.header-h1 {
	margin-top: 30px;
	text-transform: uppercase;
	font-size: 2em;
	letter-spacing: 3px;
}

.header-h1,
.content-header > p,
.resume-titles,
.work-one,
.work-one > li,
.edu-single,
.list-item {
	font-family: "Lora", serif;
}

.content-header > p,
.work-one,
.work-one > li,
.edu-single,
.list-item {
	font-size: 15.5px;
}

.list-item {
	list-style-type: disc;
}

.edu-single {
	padding-top: 10px;
}

/* .resume-divider {
	margin-top: 25px;
	margin-bottom: 25px;
} */

.divider {
	width: 55%;
}

.work-exp,
.education,
.additional {
	display: flex;
	flex-direction: column;
	height: 30%;
	padding-bottom: 1em;
}

.work-content,
.edu-content {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}

.additional-content {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.edu-single,
.additional-single,
.work-one {
	padding-right: 20px;
}

.work-single {
	display: flex;
	flex-direction: column;
}

.larger {
	width: 17px;
	height: 17px;
	margin-right: 5px;
}

@media only screen and (min-width: 1024px) and (max-width: 1366px) and (orientation: portrait) {
	.resume-box {
		position: relative;
		display: flex;
		flex-direction: column;
		width: 100vw;
		/* padding: 0 10px; */
	}
	.resume-container {
		width: 95vw;
		height: fit-content;
		/* padding: 0 10px; */
	}
	.resume-preview {
		visibility: hidden;
	}

	.MuiTab-wrapper {
		font-size: large;
	}
	.resume-clear-top,
	.resume-navigation {
		justify-content: space-between;
		padding: 0 5%;
	}

	p {
		font-size: 1.2em;
	}
}
@media only screen and (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape) {
	.resume-box {
		position: relative;
		display: flex;
		flex-direction: column;
		width: 100vw;
	}
	.resume-container {
		width: 95vw;
		height: fit-content;
	}
	.resume-preview {
		visibility: hidden;
	}

	.MuiTab-wrapper {
		font-size: large;
	}
	.resume-clear-top,
	.resume-navigation {
		justify-content: space-between;
		padding: 0 5%;
	}

	.right {
		width: 60vw;
		min-height: 100vh;
		margin: 0 auto;
		margin-top: 5%;
	}

	p {
		font-size: 1.2em;
	}
}

@media only screen and (min-width: 768px) and (max-width: 1024px) {
	.resume-box {
		position: relative;
		display: flex;
		flex-direction: column;
		width: 109vw;
	}
	.resume-container {
		width: 100vw;
		height: fit-content;
		margin: 0 auto;
	}
	.resume-preview {
		visibility: hidden;
	}
	.right .page {
		margin-top: 5em;
		/* margin-left: 5%; */
		width: 90vw;
		height: 29.7cm;
		height: fit-content;
	}

	.right {
		width: 70vw;
		min-height: 100vh;
		margin: 0 7%;
		margin-top: 5%;
	}
	.MuiTab-wrapper {
		font-size: large;
	}
	.resume-clear-top,
	.resume-navigation {
		justify-content: space-between;
		padding: 0 5%;
	}
}
@media only screen and (min-device-width: 280px) and (max-device-width: 737px) {
	.resume-box {
		display: flex;
		flex-direction: column;
		min-height: 100vh;
		width: 90vw;
		/* overflow: hidden; */
	}
	.resume-preview {
		visibility: visible;
	}

	.resume-container {
		overflow-x: hidden;
		width: 100vw;
		box-shadow: 0 0 0.5cm #7b7d7d;
		background-color: white;
	}

	.save-clear {
		visibility: visible;
		width: 100vw;
		margin: 0;
		display: flex;
		justify-content: space-around;
	}

	.right {
		height: 100vh;
	}

	.MuiTab-wrapper {
		font-size: small;
	}
	.job-desc {
		font-size: 16px;
	}
	.resume-clear-top,
	.resume-clear {
		justify-content: space-between;
		padding: 0 3%;
	}

	.checkbox-container > ul {
		font-size: 15px;
	}

	.right .page {
		margin-top: 3.5em;
		width: 100vw;
		height: 29.7cm;
		height: fit-content;
	}

	/* Resume Preview */
	.resume-titles {
		font-size: 0.5em;
	}

	.header-h1 {
		font-size: 0.7em;
		letter-spacing: 2px;
	}

	.content-header > p,
	.work-one,
	.work-one > li,
	.edu-single,
	.list-item {
		font-size: 6px;
	}

	.additional-single {
		padding-right: 10px;
	}

	#outlined-basic,
	#outlined-multiline-static {
		font-size: 14px;
	}
	.form-style {
		width: 90%;
	}
	@media only screen and (min-device-width: 568px) and (max-device-width: 823px) and (orientation: landscape) {
		.resume-container {
			box-shadow: none;
		}
		.checkbox-container > ul {
			font-size: 17px;
		}
		.resume-navigation {
			justify-content: space-between;
		}
		.resume-clear-top,
		.resume-clear {
			justify-content: space-between;
			padding: 0 5%;
		}
		.right .page {
			margin-top: 3.5em;
			margin-left: 33%;
			width: 50vw;
			height: 29.7cm;
			height: fit-content;
		}
	}
}

